# fmx-flow-matching-mlx-demos

./: .gitignore  AGENTS.md  LICENSE  README.md  README.md.in  generate_readme.py  justfile  pyproject.toml
examples/: coupling.py  inspect_ckpt.py  mnist.py  mnist_interactive.py  time_slider.py  toy2d.py
fmx/: analytic.py  checkpoint.py  coupling.py  sample.py  sanity.py  test_flow.py  train.py
fmx/data/: __init__.py  mnist.py  toy.py
fmx/nets/: __init__.py  embed.py  mlp.py  unet.py
fmx/plot/: __init__.py  image.py  toy.py
