[project]
name = "fmx-flow-matching-mlx-demos"
version = "0.1.0"
description = "Straight-line flow matching on 2D toys and MNIST, in MLX."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "matplotlib>=3.11.0",
    "mlx>=0.31.2",
    "numpy>=2.4.6",
    "scipy>=1.18.0",
    "tyro>=1.0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fmx"]

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "pypatree",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "rust-just>=1.43.0",
]

[tool.pytest.ini_options]
testpaths = ["fmx"]

[tool.basedpyright]
# MLX and matplotlib ship no type stubs, so strict mode is all Unknown/Any noise.
# Standard mode keeps real type errors and drops the unactionable stub churn.
typeCheckingMode = "standard"

[tool.ruff]
extend-exclude = ["archive"]

[tool.ruff.lint]
# semicolons keep paired matplotlib axis setup on one line in flow/plot/
ignore = ["E702"]
